rsass/tests/spec/libsass_todo_tests/errors/mod.rs
//! Tests auto-converted from "sass-spec/spec/libsass-todo-tests/errors"

fn runner() -> crate::TestRunner {
    super::runner().with_cwd("errors")
}

mod import;

// Ignoring "unicode", not expected to work yet.
